styles.css
body {
    font-family: 'Gabarito', sans-serif;
    margin: 0;
    padding: 0;
    background-color: #000;
    color: #e6e5e5;
    overscroll-behavior-y: contain; /* Prevent bounce effect */
}

header {
    background-color: #111;
    color: #e6e5e5;
    text-align: center;
    position: sticky;
    top: 0;
    z-index: 1000;
    font-family: 'Oxanium', sans-serif;
    letter-spacing: 0.5em;
    font-weight: 200;
    height: 3rem; /* Explicitly set the height */
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 2rem;
}

h1 {
    font-size: 2rem;
    margin: 0;
}

#welcome-section {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh;
    background-color: #030609;
    overflow: hidden;
    position: fixed;
    width: 100%;
    top: 0;
    left: 0;
    z-index: 10;
}

#robot-image {
    height: 100vh;
    width: auto;
    transition: transform 0.1s ease; /* Smooth transition */
    transform-origin: 50% 15%; /* Zoom into the top center of the image */
}

.zoom-in #robot-image {
    transform: scale(8);
}

@keyframes swirl-clockwise {
    0% {
        transform: translate(-50%, -50%) rotate(0deg);
    }
    50% {
        transform: translate(-50%, -50%) rotate(180deg);
    }
    100% {
        transform: translate(-50%, -50%) rotate(360deg);
    }
}

@keyframes swirl-counterclockwise {
    0% {
        transform: translate(-50%, -50%) rotate(0deg);
    }
    50% {
        transform: translate(-50%, -50%) rotate(-180deg);
    }
    100% {
        transform: translate(-50%, -50%) rotate(-360deg);
    }
}

.hidden {
    display: none !important;
}

#scroll-container {
    height: 200vh; /* Artificial height to enable scrolling */
    overscroll-behavior: none; /* Prevent bounce effect */
}

.glowing-animation {
    position: absolute;
    border-radius: 50%;
    background: none;
    animation: swirl-clockwise 2s infinite;
    transform-origin: center;
    opacity: 0; /* Initially hidden */
}

#app-list {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    padding-top: 1rem;
    position: relative;
    width: 100%;
    height: calc(100vh - 60px);
    top: 0;
    left: 0;
    overflow-y: auto;
    background-color: #000;
    z-index: 5;
    overscroll-behavior: contain;
}

.app-card {
    background-color: #141414;
    /* border: 1px solid #222; */
    border-radius: 2px;
    margin: 1rem;
    padding: 1rem;
    width: 250px;
    text-align: left;
    display: grid;
    grid-template-areas:
        "title title image image"
        "category neuralinkIcon image image"
        "subtitle subtitle subtitle subtitle"
        "price price rating rating";
    grid-template-columns: auto auto auto;
    grid-template-rows: auto auto auto auto;
    gap: 0.5rem;
    cursor: pointer;
}

.app-card img {
    grid-area: image;
    max-width: 90px;
    border-radius: 2px;
    justify-self: end;

}

.app-card h3 {
    grid-area: title;
    margin: 0;
}

.subtitle {
    grid-area: subtitle;
    font-weight: 400;
}

.category {
    grid-area: category;
    margin: 0;
    padding: 0.05rem 0.35rem;
    background-color: #146388;
    border-radius: 0.8rem;
    display: inline-flex; /* Use flexbox for vertical centering */ 
    align-items: center; /* Vertically center the text */
    justify-content: center; /* Horizontally center the text */
    line-height: normal; /* Reset line height */
    height: 1.5rem; /* Adjust height as needed */
    text-align: center; /* Center align text */
    font-size: 0.9rem;
    justify-self: start;
    align-self: start; /* Align to the top */
    width: auto;
}

.neuralinkIcon {
    grid-area: neuralinkIcon;
    width: 28px;
    height: 17.5px;
    justify-self: start;
}

.rating {
    grid-area: rating;
    margin: 0;
    justify-self: end;
}

.price {
    grid-area: price;
    margin: 0;
    border-radius: 3px;
    display: inline-flex;
    align-items: center;
    justify-content: center;
    line-height: normal;
    height: 1.5rem;
    text-align: center;
    font-size: 0.9rem;
    justify-self: start;
    width: 80px;
    background-color: #333;
}

/* Modal styles */
#modal {
    display: flex;
    justify-content: center;
    align-items: center;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.8);
    z-index: 10000;
}

#modal-content {
    background-color: #222;
    padding: 2rem 0 1.5rem 2rem;
    border-radius: 10px;
    width: 80%;
    height: auto;
    max-width: 800px;
    position: relative;
    display: grid;
    grid-template-areas:
        "modal-name modal-name modal-image modal-image"
        "modal-subtitle modal-subtitle modal-image modal-image"
        "modal-accessories modal-category modal-image modal-image"
        "modal-description modal-description modal-image modal-image"
        "modal-price modal-rating modal-image modal-image"
        "optimus-button neuralink-button modal-image modal-image";
    grid-template-columns: repeat(4, 1fr);
    grid-template-rows: auto auto auto auto auto auto;
    gap: 0;
    align-items: start;
}

#close-modal {
    position: absolute;
    top: -15px;
    right: -15px;
    font-size: 2rem;
    cursor: pointer;
    background-color: #444;
    border-radius: 50%;
    padding: 3px;
    width: 30px;
    height: 30px;
    display: flex;
    justify-content: center;
    align-items: center;
}


#modal-image {
    grid-area: modal-image;
    max-width: 100%;
    margin: -2rem -2rem -1.5rem 0;
    border-radius: 0 10px 10px 0;
}

#modal-name {
    grid-area: modal-name;
    margin: 0 0 5px 0;
    font-size: 2rem;
}

#modal-subtitle {
    grid-area: modal-subtitle;
    align-self: start;
    margin: 0 2rem 10px 0;
    font-weight: 600;
}

#modal-category {
    grid-area: modal-category;
    font-size: 0.9rem;
    margin: 0 2rem 10px 0;
    justify-self: end;
    align-self: center;
}

#modal-accessories {
    grid-area: modal-accessories;
    margin: 0 0 10px 0;
    align-self: center;
}

#modal-description {
    grid-area: modal-description;
    text-align: justify;
    margin: 0 2rem 10px 0;
}

#modal-price {
    grid-area: modal-price;
    margin: 0 0 10px 0;
}

#modal-rating {
    grid-area: modal-rating;
    margin: 0 2rem 10px 0;
    justify-self: end;
}

#optimus-button {
    grid-area: optimus-button;
    background-image: linear-gradient(to right, #e52d27 0%, #b31217 51%, #e52d27 100%);
    margin: 4px 2rem 4px 4px;
    padding: 10px 20px;
    text-align: center;
    transition: 0.5s;
    background-size: 200% auto;
    color: #e6e5e5;
    font-family: 'Gabarito', sans-serif;
    font-size: 1rem;
    border-radius: 6px;
    border: 0;
    display: block;
    cursor: pointer;
    align-self: end;
}

#optimus-button:hover {
    background-position: right center;
}

#neuralink-button {
    grid-area: neuralink-button;
    background-image: linear-gradient(to right, #DA22FF 0%, #9733EE 51%, #DA22FF 100%);
    margin: 4px 2rem 4px 4px;
    padding: 10px 20px;
    text-align: center;
    transition: 0.5s;
    background-size: 200% auto;
    color: #e6e5e5;
    font-family: 'Gabarito', sans-serif;
    font-size: 1rem;
    border-radius: 6px;
    border: 0;
    display: block;
    cursor: pointer;
    align-self: end;
}

#neuralink-button:hover {
    background-position: right center;
}

@media (max-width: 768px) {

    header {
        height: 2rem; 
    }

    h1 {
        font-size: 1.5rem;
        letter-spacing: 0em;
        margin: 0;
    }

    #app-list {
        padding-top: 0.5rem;
    }
    
    .app-card {
        margin: 0.5rem;
        padding: 0.5rem;
        width: calc(100% - 1rem); 
        grid-template-areas:
        "title title image"
        "category neuralinkIcon image"
        "subtitle subtitle image"
        "price rating image";
        grid-template-columns: auto auto 40%;
        grid-template-rows: auto auto auto;
        gap: 0.1rem;
    }

    .subtitle {
        overflow: hidden; 
        white-space: nowrap; 
        text-overflow: ellipsis; 
    }
    

    .neuralinkIcon {
        justify-self: end;
    }

    .app-card img {
        max-width: 100%;
        height: auto;
        margin: -0.5rem -0.5rem -0.5rem 1rem;
        border-radius: 0 2px 2px 0;
    }

    /* Adjust modal layout for mobile */
    #modal-content {
        width: 100%; /* Take the full width on mobile */
        height: 100%; /* Take the full height on mobile */
        max-width: none; /* Remove max-width constraint */
        padding: 0; /* Adjust padding for mobile */
        grid-template-areas:
            "modal-image modal-image"
            "modal-name modal-name" 
            "modal-subtitle modal-subtitle"
            "modal-description modal-description"
            "modal-accessories modal-category"
            "modal-price modal-rating"
            "optimus-button optimus-button"
            "neuralink-button neuralink-button"
            "close-modal-mobile close-modal-mobile";
        grid-template-columns: 1fr;
        grid-template-rows: auto;
        overflow-y: auto; /* Enable vertical scrolling */
        -ms-overflow-style: none;  /* Internet Explorer 10+ */
        scrollbar-width: none; 
        border-radius: 0;
    }

    #close-modal {
        display: none;
    }

    #modal-image {
        margin: 0; /* Remove margin for mobile */
        border-radius: 0; /* Remove border radius for mobile */
        max-height: 100%; /* Take the full width on mobile */
        align-self: center;
    }

    #modal-name{
        margin: 0.5rem 1rem 0.5rem 1rem;
        font-size: 1.5rem;      
    }
    #modal-subtitle{
        margin: 0 1rem 1rem 1rem;
    }

    #modal-description{
        margin: 0 1rem 1rem 1rem;
    }
    
    #modal-accessories{
        margin: 0 1rem 1rem 1rem;
    }

    #modal-category{
        margin: 0 1rem 1rem 1rem;
        align-self: flex-end;
    }
    
    #modal-rating{
        margin: 0 1rem 1rem 1rem;
        align-self: flex-end;
    
    }
    
    #modal-price{
        margin: 0 1rem 1rem 1rem;
    }

    #optimus-button{
        margin: 0 1rem 1rem 1rem;
    }
    
    #neuralink-button{
        margin: 0 1rem 1rem 1rem;
    }

    #close-modal-mobile {
        grid-area: close-modal-mobile;
        display: block !important; /* Show the Close button on mobile */
        background-color: #444;
        border: none;
        cursor: pointer;
        margin: 0 1rem 1rem 1rem;
        padding: 10px 20px;
        text-align: center;
        color: #e6e5e5;
        font-family: 'Gabarito', sans-serif;
        font-size: 1rem;
        border-radius: 6px;
        align-self: center;
    }
}

